@@ -1,5 +1,11 @@
 2009-09-08  Kouichirou Eto  <2009@eto.com.nospam.com>
 
+	* lib/qwik/act-search.rb: Refactoring.
+	* lib/qwik/site-search.rb: Ditto.
+	* lib/qwik/db-searchword.rb: Ditto.
+
+2009-09-08  Kouichirou Eto  <2009@eto.com.nospam.com>
+
 	* lib/qwik/act-pagelist.rb: Fix bug.
 
 2009-09-04  Kouichirou Eto  <2009@eto.com.nospam.com>
